fixed gap in navbar dropdown

--- a/src/components/NavbarApp.css
+++ b/src/components/NavbarApp.css
@@ -80,8 +80,8 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     border-radius: 4px;
-    padding: 10px 0;
-    margin-top: 12px; 
+    top: 100%;
+    padding-top: 10px;
 }
 
 .dropdown-content a {
